name:                 conduit-audio
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    Data.Conduit.Audio
    Data.Conduit.Audio.Sndfile
    Data.Conduit.Audio.SampleRate
  build-depends:
    base >= 4.7 && < 4.8
    , conduit
    , vector
    , hsndfile
    , hsndfile-vector
    , transformers >= 0.4
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  extra-libraries:
    samplerate
