name:                 conduit-audio-ao
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10
homepage:             http://github.com/mtolly/conduit-audio
bug-reports:          http://github.com/mtolly/conduit-audio/issues

library
  exposed-modules:
    Data.Conduit.Audio.AO
    Data.Conduit.Audio.AO.Binding
  build-depends:
    base >= 4.6 && < 5
    , conduit
    , conduit-audio >= 0.1 && < 0.3
    , resourcet
    , transformers >= 0.3 && < 0.6
    , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  extra-libraries:
    ao
  build-tools: c2hs

source-repository head
  type:                 git
  location:             http://github.com/mtolly/conduit-audio
