name:                 conduit-audio-lame
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    Data.Conduit.Audio.LAME
  other-modules:
    Data.Conduit.Audio.LAME.Binding
  build-depends:
    base >= 4.7 && < 4.8
    , conduit-audio
    , conduit
    , resourcet
    , transformers
    , vector
    , bytestring
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -O2
  extra-libraries:
    mp3lame
