name:                 conduit-audio-mpg123
version:              0.1.2.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
license:              BSD3
license-file:         LICENSE
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10
homepage:             http://github.com/mtolly/conduit-audio
bug-reports:          http://github.com/mtolly/conduit-audio/issues
synopsis:             conduit-audio interface to the libmpg123 audio decoding library

library
  exposed-modules:
    Data.Conduit.Audio.Mpg123
  build-depends:
    base >= 4.6 && < 4.11
    , conduit
    , conduit-audio >= 0.1 && < 0.3
    , mpg123-bindings
    , resourcet
    , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -O2

source-repository head
  type:                 git
  location:             http://github.com/mtolly/conduit-audio
