name:                 conduit-audio-openal
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    Data.Conduit.Audio.OpenAL
  build-depends:
    base >= 4.7 && < 5
    , al
    , conduit-audio >= 0.1 && < 0.3
    , resourcet
    , transformers >= 0.3 && < 0.6
    , vector
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
