name:                 conduit-audio-samplerate
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
license:              LGPL
license-file:         LICENSE
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10
synopsis:             conduit-audio interface to the libsamplerate resampling library

library
  exposed-modules:
    Data.Conduit.Audio.SampleRate
  other-modules:
    Data.Conduit.Audio.SampleRate.Binding
  build-depends:
    base >= 4.6 && < 4.8
    , conduit
    , resourcet
    , vector
    , transformers >= 0.4
    , conduit-audio
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -O2
  extra-libraries:
    samplerate
