name:                 conduit-audio-sndfile
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
license:              LGPL
license-file:         LICENSE
category:             Sound
build-type:           Simple
cabal-version:        >= 1.10
synopsis:             conduit-audio interface to the libsndfile audio file library

library
  exposed-modules:
    Data.Conduit.Audio.Sndfile
  build-depends:
    base >= 4.7 && < 4.8
    , conduit
    , resourcet
    , hsndfile
    , hsndfile-vector
    , transformers >= 0.4
    , conduit-audio
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -O2
